--- a/app/index.html
+++ b/app/index.html
@@ -475,6 +475,79 @@
 					</div>
 				</div>
 			</section>
+			<section class="section-bar">
+				<div class="container">
+					<div class="general-head">
+						<h2 class="general-title">Заради гідності</h2>
+					</div>
+					<div class="bar-block row justify-content-around">
+						<div class="col-md-5 bar-block__wgt">
+							<div class="bar-block__item">
+								<div class="bar-block__head">
+									<div class="bar-block__head-name">Новоутворення</div>
+									<div class="bar-block__head-num">1134</div>
+								</div>
+								<div class="bar-wrapper">
+									<div class="bar-block__progress progress">
+										<div class="bar-block__progress-bar progress-bar" role="progressbar" style="width: 46%;" aria-valuenow="46" aria-valuemin="0" aria-valuemax="100">46%</div>
+									</div>
+									<div class="bar-wrapper__popup">
+										<div class="bar-wrapper__popup-txt">42</div>
+										<div class="bar-wrapper__popup-sub">дні</div>
+									</div>
+								</div>
+							</div>
+							<div class="bar-block__item">
+								<div class="bar-block__head">
+									<div class="bar-block__head-name">Назва хвороби</div>
+									<div class="bar-block__head-num">1354</div>
+								</div>
+								<div class="bar-wrapper">
+									<div class="bar-block__progress progress">
+										<div class="bar-block__progress-bar progress-bar" role="progressbar" style="width: 56%;" aria-valuenow="46" aria-valuemin="0" aria-valuemax="100">56%</div>
+									</div>
+									<div class="bar-wrapper__popup">
+										<div class="bar-wrapper__popup-txt">42</div>
+										<div class="bar-wrapper__popup-sub">дні</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-5 bar-block__wgt">
+							<div class="bar-block__item">
+								<div class="bar-block__head">
+									<div class="bar-block__head-name">Назва хвороби</div>
+									<div class="bar-block__head-num">344</div>
+								</div>
+								<div class="bar-wrapper">
+									<div class="bar-block__progress progress">
+										<div class="bar-block__progress-bar progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+									</div>
+									<div class="bar-wrapper__popup">
+										<div class="bar-wrapper__popup-txt">42</div>
+										<div class="bar-wrapper__popup-sub">дні</div>
+									</div>
+								</div>
+							</div>
+							<div class="bar-block__item">
+								<div class="bar-block__head">
+									<div class="bar-block__head-name">Назва хвороби</div>
+									<div class="bar-block__head-num">801</div>
+								</div>
+								<div class="bar-wrapper">
+									<div class="bar-block__progress progress">
+										<div class="bar-block__progress-bar progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+									</div>
+									<div class="bar-wrapper__popup">
+										<div class="bar-wrapper__popup-txt">42</div>
+										<div class="bar-wrapper__popup-sub">дні</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 			<section id="general-info" class="section-care">
 				<div class="container">
 					<!-- <div class="general-head">
@@ -629,7 +702,6 @@
 					</div>
 				</div>
 			</section> -->
-			
 			<section id="total" class="section-total">
 				<div class="container">
 					<div class="general-head">
