--- a/app/extra.html
+++ b/app/extra.html
@@ -19,7 +19,7 @@
 
     <div class="wrapper">
         <div class="content">
-            <section class="section-explenation">
+            <!-- <section class="section-explenation">
                 <div class="container">
                     <div class="general-head">
                         <h2 class="general-title">Потреба і надана допомога</h2>
@@ -1011,7 +1011,24 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
+        </div>
+
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link active" id="home1-tab" data-bs-toggle="tab" href="#home1" role="tab" aria-controls="home1" aria-selected="true">Home</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="profile1-tab" data-bs-toggle="tab" href="#profile1" role="tab" aria-controls="profile1" aria-selected="false">Profile</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="contact-tab" data-bs-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+            </li>
+        </ul>
+        <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="home1" role="tabpanel" aria-labelledby="home1-tab">.1..</div>
+            <div class="tab-pane fade" id="profile1" role="tabpanel" aria-labelledby="profile1-tab">.2..</div>
+            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">.3..</div>
         </div>
 
         <footer class="footer">
