--- a/app/index.html
+++ b/app/index.html
@@ -181,7 +181,7 @@
 														<div class="chart-tooltip"></div>
 														<svg class="chart-smart chart-smart-js" viewbox="0 0 33.83098862 33.83098862" width="180" height="180" xmlns="http://www.w3.org/2000/svg">
 															<circle class="chart-smart__background tooltip-circle" stroke="#A4C9FF" stroke-width="2" fill="none" cx="16.91549431" cy="16.91549431" r="15.91549431" data-toggle="tooltip" data-placement="top" title="Не отримали" data-i="1" data-title="Не отримали: 64%" />
-																<text x="50%" y="57%" text-anchor="middle" font-size="0.5em" fill="#363636">3756</text>
+																<text x="50%" y="57%" text-anchor="middle" font-size="0.5em" fill="#363636">3757</text>
 															<circle class="chart-smart__circle tooltip-circle" stroke="#2147A4" stroke-width="2" stroke-dasharray="36,100" stroke-linecap="round" fill="none" cx="16.91549431" cy="16.91549431" r="15.91549431" data-toggle="tooltip" data-placement="right" title="Отримали"  data-i="2" data-title="Отримали: 36%"/>
 														</svg>
 													</div>
@@ -246,61 +246,6 @@
 												<h4 class="statistic-types__title">Задоволення потреби дорослих
 												</h4>
 												<div id="legendsOldAll"></div>
-												<!-- <div class="statistic-types__note">
-													<div
-														class="statistic-types__point statistic-types__point_theme_light-blue">
-													</div>
-													<div class="statistic-types__subtitle">Первинний</div>
-												</div>
-												<div class="statistic-types__note">
-													<div
-														class="statistic-types__point statistic-types__point_theme_dark-blue">
-													</div>
-													<div class="statistic-types__subtitle">Вторинний</div>
-												</div> -->
-											</div>
-										</div>
-									</div>
-									<h2 class="general-subtitle pb-3 pt-3">Полтавські надавачі паліативної допомоги</h2>
-									<div data-aos="zoom-out-up" class="statistic-types">
-										<div class="statistic-types__wgt chart-wgt">
-											<div class="statistic-types__chart">
-												<canvas class="canvas-chart" id="instСhartAll" width="50" height="50"></canvas>
-											</div>
-											<div class="statistic-types__description">
-												<h4 class="statistic-types__title">Заклади надання допомоги
-													дітям
-												</h4>
-												<div id="instLegendsAll"></div>
-												<!-- <div class="statistic-types__note">
-													<div
-														class="statistic-types__point statistic-types__point_theme_light-blue">
-													</div>
-													<div class="statistic-types__subtitle">ЦПСМД №1</div>
-												</div>
-												<div class="statistic-types__note">
-													<div
-														class="statistic-types__point statistic-types__point_theme_dark-blue">
-													</div>
-													<div class="statistic-types__subtitle">ЦПСМД №2</div>
-												</div>
-												<div class="statistic-types__note">
-													<div
-														class="statistic-types__point statistic-types__point_theme_pink">
-													</div>
-													<div class="statistic-types__subtitle">ЦПСМД №3</div>
-												</div> -->
-											</div>
-										</div>
-										<div class="statistic-types__wgt chart-wgt">
-											<div class="statistic-types__chart">
-												<canvas class="canvas-chart" id="levelСhartAll" width="400"
-													height="400"></canvas>
-											</div>
-											<div class="statistic-types__description sec-2">
-												<h4 class="statistic-types__title">Рівні медичної допомоги
-												</h4>
-												<div id="levelLegendAll"></div>
 												<!-- <div class="statistic-types__note">
 													<div
 														class="statistic-types__point statistic-types__point_theme_light-blue">
@@ -441,6 +386,116 @@
 								</div>
 							</div>
 						</div> -->
+					</div>
+					<h2 class="general-subtitle pt-4 pb-3">Полтавські надавачі паліативної допомоги</h2>
+					<div data-aos="zoom-out-up" class="statistic-types">
+						<div class="statistic-types__wgt chart-wgt">
+							<div class="statistic-types__chart">
+								<canvas class="canvas-chart" id="instСhartAll" width="50" height="50"></canvas>
+							</div>
+							<div class="statistic-types__description">
+								<h4 class="statistic-types__title">Заклади надання допомоги
+									дітям
+								</h4>
+								<div id="instLegendsAll"></div>
+								<!-- <div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_light-blue">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №1</div>
+								</div>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_dark-blue">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №2</div>
+								</div>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_pink">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №3</div>
+								</div> -->
+							</div>
+						</div>
+						<div class="statistic-types__wgt chart-wgt">
+							<div class="statistic-types__chart">
+								<canvas class="canvas-chart" id="levelСhartAll" width="400"
+									height="400"></canvas>
+							</div>
+							<div class="statistic-types__description sec-2">
+								<h4 class="statistic-types__title">Рівні медичної допомоги
+								</h4>
+								<div id="levelLegendAll"></div>
+								<!-- <div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_light-blue">
+									</div>
+									<div class="statistic-types__subtitle">Первинний</div>
+								</div>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_dark-blue">
+									</div>
+									<div class="statistic-types__subtitle">Вторинний</div>
+								</div> -->
+							</div>
+						</div>
+					</div>
+					<h2 class="general-subtitle pt-4 pb-3">Надавання паліативної допомоги</h2>
+					<div data-aos="zoom-out-up" class="statistic-types">
+						<div class="statistic-types__wgt chart-wgt">
+							<div class="statistic-types__chart">
+								<canvas class="canvas-chart" id="providersСhartAll" width="50" height="50"></canvas>
+							</div>
+							<div class="statistic-types__description">
+								<h4 class="statistic-types__title">Заклади надання допомоги
+									дітям
+								</h4>
+								<div id="providersLegendsAll"></div>
+								<!-- <div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_light-blue">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №1</div>
+								</div>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_dark-blue">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №2</div>
+								</div>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_pink">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №3</div>
+								</div> -->
+							</div>
+						</div>
+						<div class="statistic-types__wgt chart-wgt">
+							<div class="statistic-types__chart">
+								<canvas class="canvas-chart" id="providersСhartNone" width="400"
+									height="400"></canvas>
+							</div>
+							<div class="statistic-types__description sec-2">
+								<h4 class="statistic-types__title">Рівні медичної допомоги
+								</h4>
+								<div id="providersLegendNone"></div>
+								<!-- <div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_light-blue">
+									</div>
+									<div class="statistic-types__subtitle">Первинний</div>
+								</div>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_dark-blue">
+									</div>
+									<div class="statistic-types__subtitle">Вторинний</div>
+								</div> -->
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -884,149 +939,69 @@
 								дати притулок, нагодувати, заспокоїти та підтримати. У 1981 році Всесвітня організація
 								охорони здоров’я прийняла Лісабонську декларацію – перелік прав пацієнта, серед яких
 								окремо виділили право на смерть із гідністю.</p>
-							<!-- <p class="section-care-description__txt">Це був перший крок до розбудови паліативної
-								допомоги у світі. Далі утворилась Європейська Асоціація з паліативної допомоги(ЕАПС),
-								розроблялися міжнародні стандарти з надання паліативної допомоги , впроваджувались
-								клінічні протоколи, відкривалися госпіси та профільні відділення. Із відставанням,
-								Україна долучилась до цього процесу. Як щодо Полтави?</p> -->
 							<p class="section-care-description__txt">Галузь охорони здоров’я Полтави налічує 12 міських
 								лікувально-профілактичних закладів(ЛПЗ), серед яких немає спеціалізованих установ для
 								надання паліативної допомоги.</p>
 						</div>
-						<!-- <div class="section-care-parts">
-							<div data-aos="zoom-in" class="section-care-parts__item">
-								<img class="section-care-parts__icon" src="img/hospital2.png" alt="Logo">
-								<div class="section-care-parts__description">
-									<h4 class="section-care-parts__headline">Первинна ланка</h4>
-									<p class="section-care-parts__txt">центри первинної медико-санітарної допомоги
-										(ЦПМСД)
-									</p>
-								</div>
-							</div>
-							<div data-aos="zoom-in" class="section-care-parts__item">
-								<img class="section-care-parts__icon" src="img/hospital1.png" alt="Logo">
-								<div class="section-care-parts__description">
-									<h4 class="section-care-parts__headline">Вторинна спеціалізована ланка</h4>
-									<p class="section-care-parts__txt">міські лікарні</p>
-								</div>
-							</div>
-							<div data-aos="zoom-in" class="section-care-parts__item">
-								<img class="section-care-parts__icon" src="img/hospital3.png" alt="Logo">
-								<div class="section-care-parts__description">
-									<h4 class="section-care-parts__headline">Третинна високоспеціалізована ланка</h4>
-									<p class="section-care-parts__txt">обласні медичні заклади</p>
-								</div>
-							</div>
-						</div> -->
 					</div>
-				</div>
-			</section>
-			<!-- <section id="possibility" class="section-points">
-				<div class="container">
-					<div class="section-points__row">
-						<div data-aos="zoom-in-right" class="section-points__col">
-							<h3 class="section-points__title">Можливість полегшити страждання від:</h3>
-							<div class="section-points__wrapper">
-								<div data-aos="fade-right" class="section-points__item">
-									<img class="section-points__icon" src="img/virus1.png" alt="Logo">
-									<p class="section-points__txt">Злоякісних новоутворень</p>
+					<h2 class="general-subtitle pt-4 pb-3">Заглушка</h2>
+					<div data-aos="zoom-out-up" class="statistic-types">
+						<div class="statistic-types__wgt chart-wgt">
+							<div class="statistic-types__chart position-relative chart-max-height">
+								<canvas class="canvas-chart" id="providersСhartBuild" width="50" height="50"></canvas>
+								<div class="statistic-types__chart-txt">0/2</div>
+							</div>
+							<div class="statistic-types__description">
+								<h4 class="statistic-types__title">Стаціонарні паліативні заклади (відділення)
+								</h4>
+								<div id="providersLegendsBuild"></div>
+								<!-- <div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_light-blue">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №1</div>
 								</div>
-								<div data-aos="fade-right" class="section-points__item">
-									<img class="section-points__icon" src="img/virus2.png" alt="Logo">
-									<p class="section-points__txt">Хронічних обструктивних захворювань легень</p>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_dark-blue">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №2</div>
 								</div>
-								<div data-aos="fade-right" class="section-points__item">
-									<img class="section-points__icon" src="img/virus3.png" alt="Logo">
-									<p class="section-points__txt">Діабету</p>
-								</div>
-								<div data-aos="fade-right" class="section-points__item">
-									<img class="section-points__icon" src="img/virus4.png" alt="Logo">
-									<p class="section-points__txt">Хронічної серцевої недостатності</p>
-								</div>
-								<div data-aos="fade-right" class="section-points__item">
-									<img class="section-points__icon" src="img/virus5.png" alt="Logo">
-									<p class="section-points__txt">Хвороб нирок</p>
-								</div>
-								<div data-aos="fade-right" class="section-points__item">
-									<img class="section-points__icon" src="img/virus6.png" alt="Logo">
-									<p class="section-points__txt">Хвороб Альцгеймера, Паркінсона</p>
-								</div>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_pink">
+									</div>
+									<div class="statistic-types__subtitle">ЦПСМД №3</div>
+								</div> -->
 							</div>
 						</div>
-						<div data-aos="zoom-in-left" class="section-points__col">
-							<h3 class="section-points__title">Можливість полегшити такі симтоми:</h3>
-							<div class="section-points__wrapper">
-								<div data-aos="fade-left" class="section-points__item">
-									<img class="section-points__icon" src="img/pers1.png" alt="Logo">
-									<p class="section-points__txt">Біль</p>
+						<div class="statistic-types__wgt chart-wgt">
+							<div class="statistic-types__chart position-relative chart-max-height">
+								<canvas class="canvas-chart" id="providersСhartBet" width="400"
+									height="400"></canvas>
+								<div class="statistic-types__chart-txt">10/24</div>
+							</div>
+							<div class="statistic-types__description sec-2">
+								<h4 class="statistic-types__title">Ліжка дорослим і дітям
+								</h4>
+								<div id="providersLegendBet"></div>
+								<!-- <div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_light-blue">
+									</div>
+									<div class="statistic-types__subtitle">Первинний</div>
 								</div>
-								<div data-aos="fade-left" class="section-points__item">
-									<img class="section-points__icon" src="img/pers2.png" alt="Logo">
-									<p class="section-points__txt">Задуха, проблеми з диханням</p>
-								</div>
-								<div data-aos="fade-left" class="section-points__item">
-									<img class="section-points__icon" src="img/pers3.png" alt="Logo">
-									<p class="section-points__txt">Депресія</p>
-								</div>
-								<div data-aos="fade-left" class="section-points__item">
-									<img class="section-points__icon" src="img/pers4.png" alt="Logo">
-									<p class="section-points__txt">Нудота, діарея, блювання</p>
-								</div>
-								<div data-aos="fade-left" class="section-points__item">
-									<img class="section-points__icon" src="img/pers5.png" alt="Logo">
-									<p class="section-points__txt">Безсоння</p>
-								</div>
-								<div data-aos="fade-left" class="section-points__item">
-									<img class="section-points__icon" src="img/pers6.png" alt="Logo">
-									<p class="section-points__txt">Втома</p>
-								</div>
+								<div class="statistic-types__note">
+									<div
+										class="statistic-types__point statistic-types__point_theme_dark-blue">
+									</div>
+									<div class="statistic-types__subtitle">Вторинний</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
 				</div>
-			</section> -->
-			<!-- <section id="benefits" class="section-benefits">
-				<div class="container">
-					<div data-aos="fade-down-right" class="general-head">
-						<h2 class="general-title">Переваги</h2>
-					</div>
-					<p data-aos="fade-down-left" class="section-benefits__description">Важливо аби пацієнт своєчасно
-						отримував паліативну допомогу. Сімейні лікарі мають відігравати основну роль у цьому процесі.
-						Офіційний порядок надання первинної меддопомоги визначає особливості надання окремих послуг
-						паліативної допомоги пацієнтам усіх вікових категорій, а саме:
-					</p>
-					<div class="section-benefits__points">
-						<div data-aos="zoom-out-right" class="section-benefits__item">
-							<p class="section-benefits__txt">регулярну оцінку стану важкохворого пацієнта та їх потреб
-							</p>
-						</div>
-						<div data-aos="zoom-out-left" class="section-benefits__item">
-							<p class="section-benefits__txt">оцінку ступеня болю та лікування больового синдрому
-							</p>
-						</div>
-						<div data-aos="zoom-out-right" class="section-benefits__item">
-							<p class="section-benefits__txt">консультування та навчання осіб, які доглядають пацієнта
-							</p>
-						</div>
-						<div data-aos="zoom-out-left" class="section-benefits__item">
-							<p class="section-benefits__txt">координація із забезпечення медичних, психологічних та
-								інших потреб пацієнта
-							</p>
-						</div>
-						<div data-aos="zoom-out-right" class="section-benefits__item">
-							<p class="section-benefits__txt">призначення наркотичних засобів та психотропних речовин
-								відповідно до законодавства, включаючи оформлення рецептів та лікування больового
-								синдрому
-							</p>
-						</div>
-						<div data-aos="zoom-out-left" class="section-benefits__item">
-							<p class="section-benefits__txt">призначення лікування для подолання супутніх симптомів
-								(закрепи, нудота, задуха)
-							</p>
-						</div>
-					</div>
-				</div>
-			</section> -->
+			</section>
 			<section id="total" class="section-total">
 				<div class="container">
 					<div class="general-head">
