Add last changes

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 						<div class="main-headline">
 							<p class="main-headline__subtiltle main-headline__subtiltle_theme_white text-left">НАПІВ</p>
 							<h1 class="main-headline__title">ПАЛІАТИВ</h1>
-							<p class="main-headline__subtiltle main-headline__subtiltle_theme_white text-right">У ПОЛТАВІ</p>
+							<p class="main-headline__subtiltle main-headline__subtiltle_theme_blue text-right">У ПОЛТАВІ 2018</p>
 							<h2 class="main-headline__subtext main-headline__subtext_theme_grey">Ця вебвізуалізація створена на основі результатів дослідження надання паліативної допомоги в Полтаві 2018 року проведеного Інститутом аналітики та адвокації.<br>
 							З усіма результатами можна ознайомитися <a class="main-headline__subtext--link" href="https://iaa.org.ua/library/napiv-paliatyv-u-poltavi/">тут.</a>
 							</h2>
