--- a/app/index.html
+++ b/app/index.html
@@ -470,7 +470,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">31</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -485,7 +485,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">2</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -500,7 +500,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">6</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -515,7 +515,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">1</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -530,7 +530,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">4</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -545,7 +545,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">3</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -560,7 +560,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">11</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -575,7 +575,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">1</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -592,7 +592,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">5</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -607,7 +607,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">2</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -622,7 +622,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">0</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -637,7 +637,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">0</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -652,7 +652,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">0</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -667,7 +667,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">0</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -682,7 +682,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">2</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -704,7 +704,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">72</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -719,7 +719,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">8</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -734,7 +734,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">719</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -749,7 +749,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">253</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -764,7 +764,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">185</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -779,7 +779,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">4</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -796,7 +796,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">6</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -811,7 +811,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">5</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -826,7 +826,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">1</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -841,7 +841,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">5</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
@@ -856,7 +856,7 @@
 												</div>
 												<div class="bar-wrapper__popup">
 													<div class="bar-wrapper__popup-txt">0</div>
-													<div class="bar-wrapper__popup-sub">хворих</div>
+													<div class="bar-wrapper__popup-sub">отримали допомогу</div>
 												</div>
 											</div>
 										</div>
